site switcher added, upload button on import overflow issue fixed

--- a/webapp/finder/find/theme/styles/theme.css
+++ b/webapp/finder/find/theme/styles/theme.css
@@ -108,8 +108,32 @@ kbd {
 .dropdown-noarrow::after {
   border: 0 none;
 }
-.site-switcher .dropdown-toggle::before {
+.site-switcher .dropdown-toggle::after {
   display: none;
+}
+.site-switcher button.btn:focus {
+  box-shadow: none;
+}
+.site-switcher .dropdown-menu,
+.site-switcher button {
+  color: #ffffff;
+  background-color: #1174d4;
+}
+.site-switcher.show .dropdown-menu,
+.site-switcher.show button {
+  color: #ffffff;
+  background-color: #4d5d80;
+}
+.site-switcher a.dropdown-item {
+  padding: 6px 12px;
+  color: #ffffff;
+}
+.site-switcher a.dropdown-item:hover {
+  color: #ffffff;
+  background-color: #5f739e !important;
+}
+.site-switcher a.dropdown-item:not(:last-child) {
+  border-bottom: 1px solid #5f739e;
 }
 .alert-error,
 .alert-save {
@@ -1109,6 +1133,7 @@ a.categorypathlink:hover {
   margin-left: 22px;
   max-height: 32px;
   -webkit-box-orient: vertical;
+  line-clamp: 1;
   -webkit-line-clamp: 1;
   display: -webkit-box;
   overflow: hidden;
@@ -1784,6 +1809,7 @@ select + .select2-container {
 .mediacenterheader .logocontainer {
   height: 90px;
   display: flex;
+  align-items: center;
 }
 
 .logocontainer h1 {
@@ -5155,7 +5181,10 @@ li.filtersselected .selected-filters a:hover {
   max-height: calc(100vh - 200px);
   overflow-y: auto;
 }
-
+#tabimportcontent .col-upload-right,
+#tabimportcontent .col-upload-left {
+  max-height: calc(100vh - 282px);
+}
 .col-upload-left .btn-lg,
 .btn-uploadnow {
   width: 38%;
